Change menu design and ensure correct toggling [note]
Previously the invisible menu was stopping mouse events from being sent, since the menu container was still shown. I've simplified the HTML structure so that the menu and its toggle can be shown and hidden easily.

--- a/editor/css/menu.css
+++ b/editor/css/menu.css
@@ -1,66 +1,45 @@
-#menu {
+#menu-body {
+    display: block;
     position: absolute;
-    width: 30%;
-    height: 100%;
     right: 0;
     top: 0;
-}
-
-#menu-header {
-    float: left;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 20%;
-}
-
-#menu-container {
-    float: left;
-    width: 100%;
-    height: 60%;
-}
-
-#menu-inner {
-    float: right;
-    width: 95%;
-    height: 100%;
+    width: 30%;
+    height: 80%;
+    background-color: var(--menu-background-color);
+    border-bottom-left-radius: 15px;
 }
 
 #menu-navigation {
     float: left;
     width: 100%;
-    height: 15%;
-    border-top-left-radius: 15px;
-    background-color: var(--menu-navigation-color);
+    height: 10%;
+    right: 0;
+    top: 0;
 }
 
-#menu-body {
+#menu-inner {
     float: left;
     width: 100%;
-    height: 85%;
-    border-bottom-left-radius: 15px;
-    background-color: var(--menu-background-color);
+    height: 90%;
+    right: 0;
+    top: 0;
 }
 
 #menu-toggle {
-    float: right;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 3%;
-    height: 100%;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 10%;
+    height: 5%;
     background-color: var(--menu-toggle-color);
-}
-
-#menu-footer {
-    float: left;
-    width: 100%;
-    height: 20%;
-    background-color: var(--menu-footer-color);
+    border-bottom-left-radius: 15px;
 }
 
 .action-button {
+    float: left;
+    width: 25%;
+    height: 100%;
     text-align: center;
     font-size: 1.5em;
     padding-left: 2em;
